Fix CORS, add Patch
